i hamade a recepie page of some foods. and i made different folders for different projects.

--- a/index.html
+++ b/index.html
@@ -3,31 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MY HTML PAGE</title>
+    <title>Document</title>
 </head>
 <body>
-    <!-- COMMENT OUT TRIAL -->
-
-    <h1>MY HEADING</h1>
-
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, exercitationem consectetur esse corrupti voluptatem eveniet praesentium maiores necessitatibus quibusdam non quidem alias vero dolorem soluta saepe sunt architecto pariatur veniam?
-    </p>
-
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut recusandae sunt quae incidunt, corrupti ducimus quidem corporis repudiandae eum quas magni laudantium architecto rem consequatur sint, est minima nam asperiores.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci voluptate eum similique quos saepe iste autem voluptatum! Quos distinctio sapiente quo amet necessitatibus. Obcaecati doloribus hic dolore voluptate ut fuga.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit nostrum veniam, error sunt soluta laudantium odio, aliquid harum neque reiciendis quae nisi perspiciatis totam aspernatur id molestias placeat. Totam, esse?
-    </p>
-
-    <p>
-        <strong>this is a strong text</strong><br>
-        <i>this word is written in italic</i><br>
-        <em>emphasis the text</em><br>
-        this is <sup>superscript</sup><br>
-        this is <sub>subscript</sub><br>
-        <b>this is written using bold.</b><br>
-        <small>this text is small</small><br>
-    </p>
+<h1>Odin Recepies</h1> 
+<p>All you are required to do is click the below links 
+    <br>to have hunger pangs.</p>  
+<a href="recepies/poha.html" target="_blank" rel="noopener noreferrer">How to make delicious POHA</a><br> 
+<a href="recepies/chocholate.html" target="_blank" rel="noopener noreferrer">How to make a CHOCOLATE</a><br>
+<a href="recepies/crazy.html" target="_blank" rel="noopener noreferrer">Most loved food...</a><br>
 </body>
 </html>
